--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -71,12 +71,15 @@
 .hero-headline {
   margin-bottom: var(--space-lg);
   line-height: 1.1;
+  font-size:30px;
+
 }
 
 .hero-subheadline {
   font-size: var(--font-size-lg);
   margin-bottom: var(--space-xl);
   max-width: 500px;
+  margin-top: 65px;
 }
 
 .hero-cta {
