--- a/src/components/Problem.css
+++ b/src/components/Problem.css
@@ -60,6 +60,7 @@
   margin-bottom: var(--space-xl);
   color: var(--color-gray-light);
   line-height: 1.8;
+  text-align: center;
 }
 
 .problem-cta {
