--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,10 @@
   /* Typography */
   --font-primary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   --font-size-xs: clamp(0.75rem, 0.7rem + 0.25vw, 0.875rem);
-  --font-size-sm: clamp(0.50rem, 0.5rem + 0.2vw, 0.2rem);
+  --font-size-sm: clamp(0.7rem, 0.7rem + 0.3vw, 0.9rem);
   --font-size-base: clamp(1rem, 0.9rem + 0.5vw, 1.125rem);
   --font-size-lg: clamp(1.125rem, 1rem + 0.625vw, 1.25rem);
+  --font-size-lb: clamp(1.110rem, 10.4rem + 0.600vw, 1.10rem);
   --font-size-xl: clamp(1.25rem, 1.1rem + 0.75vw, 1.5rem);
   --font-size-2xl: clamp(1.5rem, 1.3rem + 1vw, 2rem);
   --font-size-3xl: clamp(2rem, 1.7rem + 1.5vw, 3rem);
@@ -158,4 +159,10 @@ html {
   h2 {
     font-size: var(--font-size-2xl);
   }
+}
+@font-face {
+  font-family: 'Avilock';
+  src: url('./assets/fonts/Avilock Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
